# email-deep-research

./: .env.example  .gitignore  pyproject.toml
.claude/docs/: DESIGN.md
.claude/docs/research/: art-e-codebase.md  litellm-gpt5-mini.md  openpipe-art-multi-gpu.md  openpipe-art.md
.claude/logs/: cli-tools.jsonl
art_e/: rollout.py  train.py
art_e/data/: query_iterators.py
scripts/: train_slurm.sh
